--- a/RFI_Project/readme.me
+++ b/RFI_Project/readme.me
@@ -1,1 +1,1 @@
-## In this project rule-based and NLP methods are used to classify Request For Information(RFI) data from a construction company. 
+## In this project rule-based and NLP methods are used to classify Request For Information(RFI) data from a construction company into disciplines.  
